--- a/proyecto/css/style.css
+++ b/proyecto/css/style.css
@@ -69,7 +69,7 @@ aside {
   flex-direction: column;
   top: 0;
   right: 0;
-  width: 40vw;
+  width: 100%;
   max-width: 400px;
   height: 100vh;
   color: black;
@@ -91,6 +91,7 @@ aside {
   border-radius: 50%;
   aspect-ratio: 1;
   object-fit: cover;
+  background-color: black;
 }
 .cart-title {
   display: flex;
@@ -110,16 +111,23 @@ aside a:hover {
 }
 .cart-total {
   width: 100%;
-  font-weight: 900;
+  font-variation-settings: "wght" 700;
   font-size: 1.3rem;
   display: flex;
   justify-content: space-between;
   margin-bottom: 2rem;
 }
+.cart-subtotal {
+  width: 100%;
+  font-variation-settings: "wght" 600;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
 .btn-end {
   font-family: inherit;
   font-size: 0.8rem;
-  font-weight: 900;
+  font-variation-settings: "wght" 700;
   background-color: black;
   color: white;
   width: 100%;
