--- a/proyecto/css/style.css
+++ b/proyecto/css/style.css
@@ -14,12 +14,8 @@ nav ul li {
   margin: 0 20px;
   font-size: 1.3rem;
 }
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-}
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+.content {
+  line-height: 1.5;
 }
 .card img {
   aspect-ratio: 1;
@@ -28,6 +24,7 @@ nav ul li {
 .card-title {
   display: block;
 }
+
 .content-price {
   display: flex;
   justify-content: space-between;
@@ -74,18 +71,18 @@ aside {
   height: 100vh;
   color: black;
 }
-.cart-main {
+.cart-list {
   flex: 1;
 }
 .cart-item {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr 1fr;
   grid-gap: 20px;
   padding-bottom: 1.5rem;
   border-bottom: 1px dashed black;
   margin-bottom: 1.5rem;
+  font-weight: 700;
 }
-
 .cart-img img {
   display: block;
   border-radius: 50%;
@@ -93,15 +90,8 @@ aside {
   object-fit: cover;
   background-color: black;
 }
-.cart-title {
-  display: flex;
-  align-items: center;
-  font-weight: 700;
-}
 .cart-delete {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  text-align: right;
 }
 aside a {
   color: black;
