--- a/proyecto/css/main.css
+++ b/proyecto/css/main.css
@@ -7,7 +7,6 @@
 
 :root {
   --color-primary: #17fd85;
-  --color-secondary: #ea088c;
   --metric-box-spacing: 80px;
 }
 
@@ -24,6 +23,10 @@ h1 {
   font-size: 2rem;
   font-variation-settings: "wght" 700;
 }
+h2 {
+  font-size: 1.4rem;
+  font-variation-settings: "wght" 700;
+}
 p {
   line-height: 1.4;
 }
@@ -31,20 +34,12 @@ strong {
   font-weight: normal;
   font-variation-settings: "wght" 700;
 }
-
 small {
   font-size: 0.8rem;
   line-height: 1.5;
 }
-
-.text-center {
-  text-align: center;
-}
 .text-right {
   text-align: right;
-}
-.text-justify {
-  text-align: justify;
 }
 
 /* Links */
@@ -67,14 +62,11 @@ a:hover {
 .text-primary {
   color: var(--color-primary);
 }
-.text-secondary {
-  color: var(--color-secondary);
+.text-gray {
+  color: gray;
 }
 .bg-primary {
   background-color: var(--color-primary);
-}
-.bg-secondary {
-  background-color: var(--color-secondary);
 }
 
 /* Spacing */
@@ -91,13 +83,15 @@ a:hover {
 .mb-2 {
   margin-bottom: 2rem;
 }
+.text-center {
+  text-align: center;
+}
 
 /* Container */
 
 main {
   min-block-size: calc(100vh - 8em);
 }
-
 .container {
   width: 100%;
   max-width: 1080px;
@@ -107,18 +101,11 @@ main {
 
 /* Flex y Grid */
 
-.super-centered {
-  display: grid;
-  place-items: center;
-}
 .cards-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: var(--metric-box-spacing);
 }
-
-/* Decoration */
-
 .hide {
   display: none;
 }
