--- a/proyecto/css/mobile.css
+++ b/proyecto/css/mobile.css
@@ -11,4 +11,10 @@
   aside {
     max-width: 900px;
   }
+  nav ul li {
+    display: block;
+    margin: 0;
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+  }
 }
