--- a/proyecto/css/style.css
+++ b/proyecto/css/style.css
@@ -14,7 +14,8 @@ header {
 nav ul li {
   display: inline;
   margin: 0 20px;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
 }
 .content {
   line-height: 1.5;
