--- a/proyecto/css/main.css
+++ b/proyecto/css/main.css
@@ -7,7 +7,7 @@
 
 :root {
   --color-primary: #17fd85;
-  --color-secondary: #fd17a5;
+  --color-secondary: #383838;
   --metric-box-spacing: 80px;
 }
 
@@ -62,17 +62,20 @@ a:hover {
 .text-white {
   color: white;
 }
+.text-black {
+  color: black;
+}
 .text-primary {
   color: var(--color-primary);
-}
-.text-secondary {
-  color: var(--color-secondary);
 }
 .text-gray {
   color: gray;
 }
 .bg-primary {
   background-color: var(--color-primary);
+}
+.bg-secondary {
+  background-color: var(--color-secondary);
 }
 .bg-white {
   background-color: white;
@@ -95,6 +98,9 @@ a:hover {
 .mb-2 {
   margin-bottom: 2rem;
 }
+.mb-3 {
+  margin-bottom: 3rem;
+}
 .text-center {
   text-align: center;
 }
@@ -102,13 +108,19 @@ a:hover {
 /* Container */
 
 main {
-  min-block-size: calc(100vh - 8em);
+  min-block-size: calc(40vh);
 }
 .container {
   width: 100%;
   max-width: 1080px;
   margin: 0 auto;
   padding: 0 var(--metric-box-spacing);
+}
+.container-end {
+  width: 100%;
+  max-width: 520px;
+  margin: 0 auto;
+  padding: 5rem 3rem;
 }
 
 /* Flex y Grid */
