--- a/proyecto/css/style.css
+++ b/proyecto/css/style.css
@@ -136,6 +136,7 @@ aside a:hover {
   line-height: 1;
 }
 .btn-end {
+  display: block;
   font-family: inherit;
   font-size: 0.8rem;
   font-variation-settings: "wght" 700;
@@ -151,4 +152,35 @@ aside a:hover {
 .cartOpen {
   right: 0;
   transition: all 0.5s ease;
+}
+
+/* End-shop */
+
+.container-travel {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+  grid-gap: 1rem;
+}
+.travel-img {
+  width: 100%;
+  border-radius: 50%;
+  aspect-ratio: 1;
+  object-fit: cover;
+  background-color: black;
+}
+
+label {
+  display: block;
+  font-variation-settings: "wght" 700;
+  margin-bottom: 0.5rem;
+}
+input {
+  font-family: inherit;
+  font-size: 0.9rem;
+  display: block;
+  width: 100%;
+  height: 45px;
+  background-color: black;
+  color: white;
+  padding: 1rem;
 }
