--- a/proyecto/css/style.css
+++ b/proyecto/css/style.css
@@ -145,10 +145,6 @@ aside a:hover {
   width: 100%;
   padding: 16px;
 }
-.btn-end:hover,
-.btn-add:hover {
-  background-color: #333;
-}
 .cartOpen {
   right: 0;
   transition: all 0.5s ease;
@@ -156,9 +152,17 @@ aside a:hover {
 
 /* End-shop */
 
+.grid-end-shop {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+}
+.container-itinarary {
+  border-bottom: 1px black dashed;
+  padding-bottom: 2rem;
+}
 .container-travel {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
   grid-gap: 1rem;
 }
 .travel-img {
@@ -168,19 +172,19 @@ aside a:hover {
   object-fit: cover;
   background-color: black;
 }
-
 label {
   display: block;
   font-variation-settings: "wght" 700;
   margin-bottom: 0.5rem;
+  font-size: 0.8rem;
 }
 input {
   font-family: inherit;
   font-size: 0.9rem;
   display: block;
   width: 100%;
-  height: 45px;
-  background-color: black;
   color: white;
-  padding: 1rem;
+  background-color: black;
+  padding: 0.9rem;
+  font-variation-settings: "wght" 500;
 }
