--- a/proyecto/css/style.css
+++ b/proyecto/css/style.css
@@ -145,6 +145,9 @@ aside a:hover {
   width: 100%;
   padding: 16px;
 }
+.btn-end:hover {
+  color: var(--color-primary);
+}
 .cartOpen {
   right: 0;
   transition: all 0.5s ease;
@@ -187,4 +190,20 @@ input {
   background-color: black;
   padding: 0.9rem;
   font-variation-settings: "wght" 500;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.65);
+  transition: all 0.5s ease;
+  justify-content: center;
+  align-items: center;
+}
+.modal {
+  transition: all 0.5s ease;
+  width: 80%;
+  max-width: 600px;
 }
