--- a/proyecto/css/style.css
+++ b/proyecto/css/style.css
@@ -67,7 +67,8 @@ footer {
 .search input {
   background-color: transparent;
   border: 1px solid white;
-  width: 260px;
+  width: 290px;
+  color: var(--color-primary);
 }
 aside,
 nav {
