--- a/proyecto/css/mobile.css
+++ b/proyecto/css/mobile.css
@@ -11,13 +11,15 @@
   h1 {
     font-size: 1rem;
   }
-  nav ul li {
-    display: block;
-    margin: 0;
-    margin-bottom: 0.5rem;
-  }
   .grid-end-shop {
     display: block;
     grid-template-columns: none;
+  }
+  .search {
+    width: 100%;
+    top: 30px;
+  }
+  .search .search-input {
+    width: 100%;
   }
 }
