--- a/proyecto/css/main.css
+++ b/proyecto/css/main.css
@@ -56,7 +56,10 @@ button:hover {
 a:hover {
   color: var(--color-primary);
 }
-
+.btn-hover:hover {
+  background-color: white;
+  color: black;
+}
 .shadow:hover {
   box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.3);
   transition: all 0.2s ease;
